# docvault-path_traversal

./: Dockerfile  README.md  environment_interface.md  gold_patch.diff  reasoning.txt  reward_spec.md  run_tests.sh  task_config.json  test_patch.diff
annotations/: alternatives_considered.md  attack_vector.md  fix_rationale.md  root_cause.md  trajectory_annotations.jsonl
docker/: Dockerfile
grader/: grade.py
ops_handoff/: Dockerfile  gold_patch.diff  prompt.txt  reasoning.txt  task_config.json  test_patch.diff
repo/: README.md  pyproject.toml
repo/app/: __init__.py
repo/app/api/v1/: templates.py
repo/app/core/: config.py  errors.py
repo/app/models/: template.py
repo/app/services/: template_service.py
repo/app/storage/: file_loader.py
repo/data/templates/invoice/: de_DE.html  en_US.html  fr_FR.html
repo/data/templates/welcome/: en_US.html  fr_FR.html
repo/data/templates_archive/retention/2021/q4/: invoice_migration_v1.mailer.html
repo/data/templates_archive/retention/2024/q3/: locale_snapshot.preprod.html
repo/tests/: conftest.py  test_handler.py  test_template_service.py
